--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "form-data": "^4.0.0",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "react": "^18.2.0",
